docs/api/qiskit/0.19/qiskit.ignis.verification.QVFitter.mdx
---
title: QVFitter (v0.19)
description: API reference for qiskit.ignis.verification.QVFitter in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.ignis.verification.QVFitter
---

# QVFitter

<Class id="qiskit.ignis.verification.QVFitter" isDedicatedPage={true} github="https://github.com/qiskit-community/qiskit-ignis/tree/stable/0.3/qiskit/ignis/verification/quantum_volume/fitters.py" signature="QVFitter(backend_result=None, statevector_result=None, qubit_lists=None)" modifiers="class">
  Class for fitters for quantum volume.

  **Parameters**

  *   **backend\_result** (*list*) – list of results (qiskit.Result).
  *   **statevector\_result** (*list*) – the ideal statevectors of each circuit
  *   **qubit\_lists** (*list*) – list of qubit lists (what was passed to the circuit generation)

  ## Attributes

  <span id="qvfitter-depths" />

  ### depths

  <Attribute id="qiskit.ignis.verification.QVFitter.depths">
    Return depth list.
  </Attribute>

  <span id="qvfitter-heavy-output-counts" />

  ### heavy\_output\_counts

  <Attribute id="qiskit.ignis.verification.QVFitter.heavy_output_counts">
    Return the number of heavy output counts as measured.
  </Attribute>

  <span id="qvfitter-heavy-output-prob-ideal" />

  ### heavy\_output\_prob\_ideal

  <Attribute id="qiskit.ignis.verification.QVFitter.heavy_output_prob_ideal">
    Return the heavy output probability ideally.
  </Attribute>

  <span id="qvfitter-heavy-outputs" />

  ### heavy\_outputs

  <Attribute id="qiskit.ignis.verification.QVFitter.heavy_outputs">
    Return the ideal heavy outputs dictionary.
  </Attribute>

  <span id="qvfitter-qubit-lists" />

  ### qubit\_lists

  <Attribute id="qiskit.ignis.verification.QVFitter.qubit_lists">
    Return depth list.
  </Attribute>

  <span id="qvfitter-results" />

  ### results

  <Attribute id="qiskit.ignis.verification.QVFitter.results">
    Return all the results.
  </Attribute>

  <span id="qvfitter-ydata" />

  ### ydata

  <Attribute id="qiskit.ignis.verification.QVFitter.ydata">
    Return the average and std of the output probability.
  </Attribute>

  ## Methods

  <span id="qvfitter-add-data" />

  ### add\_data

  <Function id="qiskit.ignis.verification.QVFitter.add_data" signature="QVFitter.add_data(new_backend_result, rerun_fit=True)">
    Add a new result. Re calculate fit

    **Parameters**

    *   **new\_backend\_result** (*list*) – list of qv results
    *   **rerun\_fit** (*bool*) – re calculate the means and fit the result

    **Raises**

    **QiskitError** – If the ideal distribution isn’t loaded yet

    #### Additional information:

    Assumes that ‘result’ was executed is the output of circuits generated by qv\_circuits,
  </Function>

  <span id="qvfitter-add-statevectors" />

  ### add\_statevectors

  <Function id="qiskit.ignis.verification.QVFitter.add_statevectors" signature="QVFitter.add_statevectors(new_statevector_result)">
    Add the ideal results and convert to the heavy outputs.

    Assume the result is from ‘statevector\_simulator’

    **Parameters**

    **new\_statevector\_result** (*list*) – ideal results

    **Raises**

    **QiskitError** – If the result has already been added for the circuit
  </Function>

  <span id="qvfitter-calc-data" />

  ### calc\_data

  <Function id="qiskit.ignis.verification.QVFitter.calc_data" signature="QVFitter.calc_data()">
    Make a count dictionary for each unique circuit from all the results.

    Calculate the heavy output probability.

    #### Additional information:

    Assumes that ‘result’ was executed is the output of circuits generated by qv\_circuits,
  </Function>

  <span id="qvfitter-calc-statistics" />

  ### calc\_statistics

  <Function id="qiskit.ignis.verification.QVFitter.calc_statistics" signature="QVFitter.calc_statistics()">
    Convert the heavy outputs in the different trials into mean and error for plotting.

    Here we assume the error is due to a binomial distribution
  </Function>

  <span id="qvfitter-plot-qv-data" />

  ### plot\_qv\_data

  <Function id="qiskit.ignis.verification.QVFitter.plot_qv_data" signature="QVFitter.plot_qv_data(ax=None, show_plt=True)">
    Plot the qv data as a function of depth

    **Parameters**

    *   **ax** (*Axes or None*) – plot axis (if passed in).
    *   **show\_plt** (*bool*) – display the plot.

    **Raises**

    **ImportError** – If matplotlib is not installed.
  </Function>

  <span id="qvfitter-quantum-volume" />

  ### quantum\_volume

  <Function id="qiskit.ignis.verification.QVFitter.quantum_volume" signature="QVFitter.quantum_volume()">
    Return the volume for each depth.

    **Returns**

    List of quantum volumes

    **Return type**

    list
  </Function>

  <span id="qvfitter-qv-success" />

  ### qv\_success

  <Function id="qiskit.ignis.verification.QVFitter.qv_success" signature="QVFitter.qv_success()">
    Return whether each depth was successful (>2/3 with confidence greater than 97.5) and the confidence

    **Returns**

    List of lenth depth with eact element a 3 list with - success True/False - confidence

    **Return type**

    list
  </Function>
</Class>

